[package]
name = "blockfast"
version = "0.1.0"
authors = ["Pierre Dubouilh <pldubouilh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linemux = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
regex = "1.5.4"
clap = "2.33.3"
anyhow = "1.0.44"
ipset-sys = "0.1.2"